--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <h2 class="heading">Group of Architects </h2>
                 <p class="paraghaph">They develop the concepts for structures and turn those concepts into images and
                     plans </p>
+                    <button class="btn">Explore More</button>
             </div>
         </section>
         <section class="header-img">
@@ -52,9 +53,8 @@
                     <div class="item">
      <pre><span class="one">Quick list </span>of Our 
 <span class="two">Features</span> </pre>
-                      <p>They develop the concepts for 
-                           structures and turn those concepts into images
-                                  and plans </p>
+     <p>They develop the concepts for structures and turn those concepts into images and plans </p>
+                                  <button class="btn">Explore More</button>
                     </div>
                 </div> 
             </div>
